; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_se.c_se200pci_WM8766_set_volume.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_se.c_se200pci_WM8766_set_volume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ice1712 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ice1712*, i32, i32, i32)* @se200pci_WM8766_set_volume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @se200pci_WM8766_set_volume(%struct.snd_ice1712* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.snd_ice1712*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.snd_ice1712* %0, %struct.snd_ice1712** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %34 [
    i32 0, label %10
    i32 1, label %18
    i32 2, label %26
  ]

10:                                               ; preds = %4
  %11 = load %struct.snd_ice1712*, %struct.snd_ice1712** %5, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %11, i32 0, i32 %12)
  %14 = load %struct.snd_ice1712*, %struct.snd_ice1712** %5, align 8
  %15 = load i32, i32* %8, align 4
  %16 = or i32 %15, 256
  %17 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %14, i32 1, i32 %16)
  br label %34

18:                                               ; preds = %4
  %19 = load %struct.snd_ice1712*, %struct.snd_ice1712** %5, align 8
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %19, i32 4, i32 %20)
  %22 = load %struct.snd_ice1712*, %struct.snd_ice1712** %5, align 8
  %23 = load i32, i32* %8, align 4
  %24 = or i32 %23, 256
  %25 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %22, i32 5, i32 %24)
  br label %34

26:                                               ; preds = %4
  %27 = load %struct.snd_ice1712*, %struct.snd_ice1712** %5, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %27, i32 6, i32 %28)
  %30 = load %struct.snd_ice1712*, %struct.snd_ice1712** %5, align 8
  %31 = load i32, i32* %8, align 4
  %32 = or i32 %31, 256
  %33 = call i32 @se200pci_WM8766_write(%struct.snd_ice1712* %30, i32 7, i32 %32)
  br label %34

34:                                               ; preds = %4, %26, %18, %10
  ret void
}

declare dso_local i32 @se200pci_WM8766_write(%struct.snd_ice1712*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
